--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -165,11 +165,16 @@ jobs:
     outputs:
       ok: ${{ steps.check-secrets.outputs.ok }}
     steps:
-      - name: check for secrets needed to upload on GCP Cloud Storage
+      - name: Check for secrets needed to upload validation reports to GCP Cloud Storage
         id: check-secrets
         run: |
-          if [ ! -z "${{ secrets.VALIDATOR_SA_KEY }}" ]; then
+          if [[ "${{ secrets.VALIDATOR_SA_KEY }}" != "" ]];
+          then
+            echo "Secrets to upload validations reports to Google Cloud are configured in the repo."
             echo "::set-output name=ok::true"
+          else
+            echo "Secrets are NOT configured to upload validation reports to Google Cloud - skipping upload. This is expected for pull requests from forks."
+            echo "::set-output name=ok::false"
           fi
   get-reports:
     needs: [ fetch-urls, pack-master, pack-snapshot, secrets-gate ]
@@ -199,13 +204,13 @@ jobs:
           path: ${{ github.sha }}/output
       - name: Set up and authorize Cloud
         uses: google-github-actions/auth@v0
-        if: ${{ needs.secrets-gate.outputs.ok == 'true' }}
+        if: needs.secrets-gate.outputs.ok == 'true'
         with:
           credentials_json: ${{ secrets.VALIDATOR_SA_KEY }}
       - name: Upload reports to Google Cloud Storage
         id: upload-files
         uses: google-github-actions/upload-cloud-storage@main
-        if: ${{ needs.secrets-gate.outputs.ok == 'true' }}
+        if: needs.secrets-gate.outputs.ok == 'true'
         with:
           path: ${{ github.sha }}/output
           destination: gtfs-validator-reports
