--- a/main/build.gradle
+++ b/main/build.gradle
@@ -35,6 +35,7 @@ jar {
     manifest {
         attributes('Implementation-Title': rootProject.name,
                 'Implementation-Version': project.version,
+                'Validator-Version': "${System.getenv("versionTag")}",
                 'Main-Class': 'org.mobilitydata.gtfsvalidator.cli.Main',
                 'Multi-Release': 'true')
     }
@@ -86,6 +87,7 @@ dependencies {
     implementation 'com.univocity:univocity-parsers:2.9.0'
     implementation 'com.google.geometry:s2-geometry:2.0.0'
     implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
+    implementation 'com.jcabi:jcabi-manifests:1.1'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation 'com.google.truth:truth:1.0.1'
     testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
