--- a/.github/workflows/test_pack_doc.yml
+++ b/.github/workflows/test_pack_doc.yml
@@ -45,7 +45,7 @@ jobs:
     strategy:
       matrix:
         java_version: [ 11, 17 ]
-        os: [ ubuntu-latest, windows-latest, ubuntu-20.04 ]
+        os: [ ubuntu-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK ${{ matrix.java_version }}
@@ -86,7 +86,7 @@ jobs:
     strategy:
       matrix:
         java_version: [ 11, 17 ]
-        os: [ ubuntu-latest, windows-latest, ubuntu-20.04 ]
+        os: [ ubuntu-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK ${{ matrix.java_version }}
@@ -117,7 +117,7 @@ jobs:
     strategy:
       matrix:
         java_version: [ 11, 17 ]
-        os: [ ubuntu-latest, ubuntu-20.04, windows-latest ]
+        os: [ ubuntu-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK ${{ matrix.java_version }}
