Refactor cli.Main into ValidationRunner for easier reuse.
Per discussion in issue #1135 and https://bit.ly/gtfs-validator-packaged-exe#heading=h.fcbgc2jy8dh,
we'd like to refactor code in cli.Main into a new class that's easier to call from other contexts,
including the new GUI-based app.

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     annotationProcessor project(':processor')
     compileOnly project(':processor')
     implementation project(':core')
+    annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
+    compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
     implementation 'com.beust:jcommander:1.48'
     implementation 'javax.inject:javax.inject:1'
