--- a/app/gui/build.gradle
+++ b/app/gui/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     implementation project(':main')
     implementation 'com.google.flogger:flogger:0.6'
     implementation 'com.google.flogger:flogger-system-backend:0.6'
+    testImplementation group: 'junit', name: 'junit', version: '4.13'
+    testImplementation 'com.google.truth:truth:1.0.1'
+    testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
+    testImplementation 'org.mockito:mockito-core:4.5.1'
 }
 
 jar {
