--- a/app/pkg/build.gradle
+++ b/app/pkg/build.gradle
@@ -39,7 +39,7 @@ extraJavaModuleInfo {
     //
     // See additional discussion in https://bit.ly/gtfs-validator-packaged-exe and
     // https://docs.gradle.org/current/samples/sample_java_modules_with_transform.html
-    module('gui-all.jar', 'org.mobilitydata.gtfsvalidator.app.gui', project.version) {
+    module("gui-${project.version}-all.jar", 'org.mobilitydata.gtfsvalidator.app.gui', project.version) {
         exports('org.mobilitydata.gtfsvalidator.app.gui')
 
         // This is the set of core Java modules that our application depends on.
@@ -92,6 +92,9 @@ jlink {
     // Passed to jlink to create an even smaller JRE.
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     jpackage {
+        // Some platforms (e.g. Mac OS) need a pure x.y.z version number.
+        // So strip any -SNAPSHOT suffix if present.
+        appVersion = project.version.toString().replace('-SNAPSHOT', '')
         if (org.gradle.internal.os.OperatingSystem.current().windows) {
             installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
             imageOptions += ['--win-console']
