--- a/core/build.gradle
+++ b/core/build.gradle
@@ -16,10 +16,8 @@
 
 plugins {
     id 'java'
+    id 'maven-publish'
 }
-
-group 'org.mobilitydata'
-version "gtfs-validator-${System.getenv("versionTag")}"
 
 sourceCompatibility = JavaVersion.VERSION_11
 compileTestJava.options.encoding = "UTF-8"
@@ -48,6 +46,16 @@ dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = 'gtfs-validator-core'
+
+            from components.java
+        }
+    }
 }
 
 test {
