Remove references to versionTag env variable in workflows.  It is no longer needed now that project version is determined within Gradle directly.
Also fixup references to shadow jars, since they no longer include
the versionTag in the filename (also _cli => -cli).

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -37,12 +37,10 @@ shadowJar {
     minimize {
         exclude(dependency('org.apache.httpcomponents:httpclient'))
     }
-    // Change the JAR name from cli-app to gtfs-validator
+    // Change the JAR name from 'main' to 'gtfs-validator'
     archiveBaseName = rootProject.name
-    // Remove "-all" from the end of the JAR file name
-    archiveClassifier = null
-    // Add "v" to version to match previous releases
-    archiveVersion = project.version
+    // Change the JAR suffix from 'all' to 'cli'
+    archiveClassifier = 'cli'
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
