--- a/.github/workflows/test_pack_doc.yml
+++ b/.github/workflows/test_pack_doc.yml
@@ -102,15 +102,13 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: Package cli app jar with Gradle
         uses: eskatos/gradle-command-action@v1
-        env:
-          versionTag: ${{ needs.prepare-version-name.outputs.versionTag }}
         with:
           arguments: shadowJar
       - name: Persist cli app jar
         uses: actions/upload-artifact@v2
         with:
           name: Application - CLI executable - Java ${{ matrix.java_version }} JAR file -- ${{ needs.prepare-version-name.outputs.versionTag }} -- ${{ matrix.os }}
-          path: main/build/libs/gtfs-validator-${{ needs.prepare-version-name.outputs.versionTag }}_cli.jar
+          path: main/build/libs/gtfs-validator-*-cli.jar
   doc:
     needs: [test, prepare-version-name]
     runs-on: ${{ matrix.os }}
@@ -133,8 +131,6 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: Build Javadoc
         uses: eskatos/gradle-command-action@v1
-        env:
-          versionTag: ${{ needs.prepare-version-name.outputs.versionTag }}
         with:
           arguments: aggregateJavadoc
       - name: Persist javadoc
