--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -100,7 +100,7 @@ jobs:
           if [ ${VERSION_TAG} != ${GITHUB_REF#refs/tags/} ]; then
             VERSION_TAG=v${VERSION_TAG}-sha-${GITHUB_SHA::8}-MASTER
           fi
-          echo ::set-output name=versionTag::${VERSION_TAG}      - name: Set up JDK 11
+          echo ::set-output name=versionTag::${VERSION_TAG}
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
