--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -35,7 +35,11 @@ jobs:
       - uses: gradle/wrapper-validation-action@v1
   run-on-data:
     needs: [ validate_gradle_wrapper ]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        java_version: [ 11 ]
+        os: [ ubuntu-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v1
       - name: Prepare version name
@@ -53,10 +57,10 @@ jobs:
             VERSION_TAG=v${VERSION_TAG}-sha-${GITHUB_SHA::8}-SNAPSHOT
           fi
           echo ::set-output name=versionTag::${VERSION_TAG}
-      - name: Set up JDK 11
+      - name: Set up JDK ${{ matrix.java_version }}
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: ${{ matrix.java_version }}
           distribution: 'temurin'
       - name: Cache Gradle packages
         uses: actions/cache@v2
@@ -64,7 +68,7 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
-      - name: Package cli app jar with Gradle
+      - name: Package cli app jar with Gradle - Java ${{ matrix.java_version }} and ${{ matrix.os }}
         uses: eskatos/gradle-command-action@v1
         env:
           versionTag: ${{ steps.prep.outputs.versionTag }}
