--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,21 +17,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Prepare version name
-        id: prep
-        run: |
-          VERSION_TAG=edge
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            VERSION_TAG=${GITHUB_REF#refs/tags/}
-          elif [[ $GITHUB_REF == refs/heads/* ]]; then
-            VERSION_TAG=-$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
-          elif [[ $GITHUB_REF == refs/pull/* ]]; then
-            VERSION_TAG=-pr-${{ github.event.number }}
-          fi
-          if [ ${VERSION_TAG} != ${GITHUB_REF#refs/tags/} ]; then
-            VERSION_TAG=v${VERSION_TAG}-sha-${GITHUB_SHA::8}-SNAPSHOT
-          fi
-          echo ::set-output name=versionTag::${VERSION_TAG}
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -50,13 +35,13 @@ jobs:
       - name: Persist **Passing** Java tests merged report
         uses: actions/upload-artifact@v2
         with:
-          name: Test report - Java -- ${{ steps.prep.outputs.versionTag }}
+          name: Test report - Java
           path: build/reports/allTests/
       - name: Persist **Failing** Java tests unmerged reports
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
-          name: Test report - Java -- ${{ steps.prep.outputs.versionTag }}
+          name: Test report - Java
           path: |
             core/build/reports/tests/
             main/build/reports/tests/
@@ -71,34 +56,7 @@ jobs:
       - name: Prepare
         id: prep
         run: |
-          DOCKER_IMAGE=ghcr.io/mobilitydata/gtfs-validator
-          VERSION=edge
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/}
-          elif [[ $GITHUB_REF == refs/heads/* ]]; then
-            VERSION=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
-          elif [[ $GITHUB_REF == refs/pull/* ]]; then
-            VERSION=pr-${{ github.event.number }}
-          fi
-          TAGS="${DOCKER_IMAGE}:${VERSION}"
-          if [ "${{ github.event_name }}" = "push" ]; then
-            TAGS="${DOCKER_IMAGE}:latest"
-          fi
-          echo ::set-output name=version::${VERSION}
-          echo ::set-output name=tags::${TAGS}
           echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-          GRADLE_VERSION_TAG=edge
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            GRADLE_VERSION_TAG=${GITHUB_REF#refs/tags/}
-          elif [[ $GITHUB_REF == refs/heads/* ]]; then
-            GRADLE_VERSION_TAG=-$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
-          elif [[ $GITHUB_REF == refs/pull/* ]]; then
-            GRADLE_VERSION_TAG=-pr-${{ github.event.number }}
-          fi
-          if [ ${GRADLE_VERSION_TAG} != ${GITHUB_REF#refs/tags/} ]; then
-            GRADLE_VERSION_TAG=v${VERSION_TAG}-sha-${GITHUB_SHA::8}-SNAPSHOT
-          fi
-          echo ::set-output name=gradleVersionTag::${GRADLE_VERSION_TAG}
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -112,8 +70,6 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: Package cli app jar with Gradle
         uses: eskatos/gradle-command-action@v1
-        env:
-          versionTag: ${{ steps.prep.outputs.gradleVersionTag }}
         with:
           arguments: shadowJar
       - name: Set up Docker Buildx
