feat: Refactor handling of project version numbers and tags (#1147)
* Per issue #1139, refactor how versions are handled in project.

Currently, project version info is passed in via a `versionTag` env variable,
which is only specified in the Github workflow environment.  Consequently,
`project.version` ends up being `null` when run locally.  This causes
weirdness for tools that expect a valid version number.

This change switches the project to use the axion-release plugin, which
determines the project version by looking at the git repo's tags.

Along with that switch, I've moved the project group and version
specification into the root build.gradle allprojects {} such that
these values do not need to be specified in each sub-poject.

I also did some related clean-up for our jitpack configuration (and
Maven repository modules, should we every decide to publish them).
I believe our current jitpack config doesn't actually work correctly
because we only publish artifacts from the main package, but not core.

You can see this in practice when looking at:
https://jitpack.io/com/github/MobilityData/gtfs-validator/3.0.1/gtfs-validator-3.0.1.pom

Notice how it has a dependency on the `core` module but we don't
actually publish it anywhere.  If you actually attempt to use our
project as a jitpack dependency, it will fail.

The change was to also publish the core module and to specify more
natural artifact names.

* Remove references to versionTag env variable in workflows.  It is no
longer needed now that project version is determined within Gradle
directly.

Also fixup references to shadow jars, since they no longer include
the versionTag in the filename (also _cli => -cli).

* Restore versionTag behavior for master branch.

We can't update this code until the PR actually goes in on the master
branch.

* Fix typo in yml.

* Download artifacts to separate directories to avoid eventual name conflicts.

* Remove all references to v

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -22,13 +22,6 @@ plugins {
 }
 
 applicationDefaultJvmArgs = [ "-Xmx8G" ]
-def groupName = 'org.mobilitydata'
-
-group groupName
-version "${System.getenv("versionTag")}"
-
-group groupName
-version "${System.getenv("versionTag")}_cli"
 
 jar {
     // Add the manifest within the JAR, using gtfs-validator as the title
@@ -44,12 +37,10 @@ shadowJar {
     minimize {
         exclude(dependency('org.apache.httpcomponents:httpclient'))
     }
-    // Change the JAR name from cli-app to gtfs-validator
+    // Change the JAR name from 'main' to 'gtfs-validator'
     archiveBaseName = rootProject.name
-    // Remove "-all" from the end of the JAR file name
-    archiveClassifier = null
-    // Add "v" to version to match previous releases
-    archiveVersion = project.version
+    // Change the JAR suffix from 'all' to 'cli'
+    archiveClassifier = 'cli'
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -63,9 +54,7 @@ repositories {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            groupId = groupName
-            artifactId = rootProject.name
-            version = "${System.getenv("versionTag")}"
+            artifactId = 'gtfs-validator-main'
 
             from components.java
         }
