--- a/.github/workflows/package_app.yml
+++ b/.github/workflows/package_app.yml
@@ -25,6 +25,8 @@ jobs:
         os: [ macos-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
