Try to catch Ubuntu packages.

--- a/.github/workflows/package_app.yml
+++ b/.github/workflows/package_app.yml
@@ -49,3 +49,4 @@ jobs:
           path: |
             app/pkg/build/jpackage/*.msi
             app/pkg/build/jpackage/*.dmg
+            app/pkg/build/jpackage/*.deb
