--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -35,17 +35,13 @@ jobs:
       - uses: gradle/wrapper-validation-action@v1
   run-on-data:
     needs: [ validate_gradle_wrapper ]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        java_version: [ 11 ]
-        os: [ ubuntu-latest, windows-latest ]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: ${{ matrix.java_version }}
+          java-version: '11'
           distribution: 'temurin'
       - name: Cache Gradle packages
         uses: actions/cache@v2
@@ -53,7 +49,7 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
-      - name: Package cli app jar with Gradle - Java ${{ matrix.java_version }} and ${{ matrix.os }}
+      - name: Package cli app jar with Gradle
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: shadowJar
