--- a/.github/workflows/package_installers.yml
+++ b/.github/workflows/package_installers.yml
@@ -3,6 +3,8 @@ name: Package Installers
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '**.md'
   pull_request:
     branches: [ master ]
     paths-ignore:
