Add logic to resolve the current app version and notify if a new version is available.

--- a/app/gui/src/main/resources/org/mobilitydata/gtfsvalidator/app/gui/GtfsValidatorApp.properties
+++ b/app/gui/src/main/resources/org/mobilitydata/gtfsvalidator/app/gui/GtfsValidatorApp.properties
@@ -8,6 +8,9 @@ output_directory=Output Directory:
 choose_output_directory=Choose Output Directory...
 output_directory_description=The validation report will be written here.
 
+new_version_available=A new version of the Canonical GTFS Schedule validator is available!
+download_here=Download here to get the latest/best validation results.
+
 advanced=Advanced
 advanced_options=Advanced Options
 number_of_threads=Number of threads used to run the validator:
