Update Mac OS icon.

--- a/app/pkg/build.gradle
+++ b/app/pkg/build.gradle
@@ -106,7 +106,7 @@ jlink {
         }
         if (OperatingSystem.current().isMacOsX()) {
             imageOptions = [
-                    '--icon', "${projectDir}/src/main/icons/GtfsValidator.icns"
+                    '--icon', "${projectDir}/src/main/icons/Icon.icns"
             ]
         }
     }
