--- a/app/pkg/build.gradle
+++ b/app/pkg/build.gradle
@@ -101,7 +101,7 @@ jlink {
         if (OperatingSystem.current().isWindows()) {
             installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
             imageOptions = [
-                    '--icon', "${projectDir}/src/main/icons/Icon.ico",
+                    '--icon', "${projectDir}/src/main/icons/Icon.ico", '--win-console'
             ]
         }
         if (OperatingSystem.current().isMacOsX()) {
