feat: Add an icon for the GUI application (#1179)
* Test run of application icons.

These icons are not final, but meant as a test of the packaging platform.

* Try adding an in-app icon.

* Actually add the image.

* Add defensive null check.

* Update Mac OS icon.

* Add the application icon SVG source.

* Add a helper script for Mac icon creation.

* Update Windows icon + add conversion script.

* Update Mac OS icon.

* Update core icon with better background transparency.

* Update Windows icon, including more intermediate resolutions in the ico file.

* Support different resolution icons within the app JFrame.

* Support JFrame app icon in multiple resolutions.

* Fix typo.

* Add README and script updates.

* Java format.

* Add the --win-console option back in.

Co-authored-by: Brian Ferris <bdferris@google.com>

--- a/app/pkg/build.gradle
+++ b/app/pkg/build.gradle
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+import org.gradle.internal.os.OperatingSystem
+
 plugins {
     id 'java'
     id "de.jjohannes.extra-java-module-info" version "0.11"
@@ -96,9 +98,16 @@ jlink {
         // Some platforms (e.g. Mac OS) need a pure x.y.z version number.
         // So strip any -SNAPSHOT suffix if present.
         appVersion = project.version.toString().replace('-SNAPSHOT', '')
-        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+        if (OperatingSystem.current().isWindows()) {
             installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
-            imageOptions += ['--win-console']
+            imageOptions = [
+                    '--icon', "${projectDir}/src/main/icons/Icon.ico", '--win-console'
+            ]
+        }
+        if (OperatingSystem.current().isMacOsX()) {
+            imageOptions = [
+                    '--icon', "${projectDir}/src/main/icons/Icon.icns"
+            ]
         }
     }
 }
