Fix bug with ssl network connections + Java module permissions.
Closes #1181.

--- a/app/pkg/build.gradle
+++ b/app/pkg/build.gradle
@@ -57,6 +57,9 @@ extraJavaModuleInfo {
         requires('java.prefs')
         requires('java.security.jgss')
         requires('java.sql')
+        // Need for SSL support for network connections.
+        requires('jdk.crypto.ec')
+        requires('jdk.crypto.cryptoki')
   }
 }
 
