Include Mac OS .app in installer artifact.

--- a/.github/workflows/package_installers.yml
+++ b/.github/workflows/package_installers.yml
@@ -51,4 +51,5 @@ jobs:
           path: |
             app/pkg/build/jpackage/*.msi
             app/pkg/build/jpackage/*.dmg
+            app/pkg/build/jpackage/*.app
             app/pkg/build/jpackage/*.deb
