fix: Temporary fix for MacOS validator app corruption (#1186)
* Include Mac OS .app in installer artifact.

* Use temurin jdk distro, drop .app from package.

* Don't create the app dmg in gradle.  Instead, create an unsigned
bundle in github workflow.

* Add a comment.

* Switch back to zulu distro.

Co-authored-by: Maxime Armstrong <46797220+maximearmstrong@users.noreply.github.com>

--- a/app/pkg/build.gradle
+++ b/app/pkg/build.gradle
@@ -111,6 +111,7 @@ jlink {
             imageOptions = [
                     '--icon', "${projectDir}/src/main/icons/Icon.icns"
             ]
+            skipInstaller = true
         }
     }
 }
