Fixes harvest_latest_versions.py

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -116,7 +116,7 @@ jobs:
       - name: Set URL matrix
         id: set-matrix
         run: |
-          python3 scripts/mobility-database-harvester/harvest_latest_versions.py
+          python3 scripts/mobility-database-harvester/harvest_latest_versions.py -d scripts/mobility-database-harvester
           DATASETS=$(jq . scripts/mobility-database-harvester/latest_versions.json -c)
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
