--- a/.github/config.yml
+++ b/.github/config.yml
@@ -14,7 +14,7 @@ newIssueWelcomeComment: >
 newPRWelcomeComment: >
   Thanks for opening this pull request! You're awesome.
   We use [semantic commit messages](https://github.com/electron/electron/blob/main/docs/development/pull-requests.md#commit-message-guidelines) to streamline the release process. Before your pull request can be merged, you should **update your pull request title** to start with a semantic prefix.
-  Examples of commit messages with semantic prefixes:
+  Examples of titles with semantic prefixes:
     - `fix: Bug with ssl network connections + Java module permissions.`
     - `feat: Initial support for multiple @PrimaryKey annotations.
     - `docs: update RELEASE.md with new process`
