--- a/.github/workflows/test_pack_doc.yml
+++ b/.github/workflows/test_pack_doc.yml
@@ -53,6 +53,7 @@ jobs:
         with:
           name: Test report - Java ${{ matrix.java_version }} on ${{ matrix.os }}
           path: |
+            cli/build/reports/tests/
             core/build/reports/tests/
             main/build/reports/tests/
             processor/build/reports/tests/
@@ -85,7 +86,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Application - CLI executable - Java ${{ matrix.java_version }} JAR file -- ${{ matrix.os }}
-          path: main/build/libs/gtfs-validator-*-cli.jar
+          path: cli/build/libs/gtfs-validator-*-cli.jar
   doc:
     needs: [test]
     runs-on: ${{ matrix.os }}
