--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'gtfs-validator'
 include 'app:gui'
 include 'app:pkg'
+include 'cli'
 include 'core'
 include 'processor'
 include 'processor:tests'
